--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
 asgiref==3.8.1
+certifi==2025.4.26
+charset-normalizer==3.4.2
+ciso8601==2.3.2
 Django==5.2
+django-bootstrap5==25.1
+glob2==0.7
+idna==3.10
+just==0.8.162
+lxml==5.4.0
+orjson==3.10.18
+paho-mqtt==2.1.0
+PyYAML==6.0.2
+requests==2.32.3
+requests-viewer==0.0.12
 sqlparse==0.5.3
+urllib3==2.4.0
